<?xml version="1.0"?>
<package format="2">
    <name>diploma</name>
    <version>0.2.0</version>
    <description>The diploma package</description>
    <maintainer email="jason03091997@gmail.com">Roman Terentev</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>geometry_msgs</depend>

    <export>
    </export>
</package>
